# No-homework-realistic-handwriting-rest-implementation

./: .si.json  Cargo.toml  README.md  documentation.md  release-key.keystore
.github/workflows/: android-build.yml
android-app/: Cargo.toml
android-app/res/: AndroidManifest.xml
android-app/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
paper/: Cargo.toml
paper/src/: lib.rs
styles/natural/: Cargo.toml
styles/natural/src/: lib.rs
