[package]
name = "homework-engine-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
paper = { path = "../paper" }
natural-style = { path = "../styles/natural" }
image = { version = "0.25", default-features = false, features = ["png"] }
egui = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
winit = { version = "0.30", features = ["android-native-activity"] }
# Explicitly pin android-activity to avoid version conflicts
android-activity = { version = "=0.5.2", features = ["native-activity"] }
serde_json = "1"
wgpu = "0.19"               # required by egui-wgpu 0.27
pollster = "0.3"            # for blocking on async wgpu setup

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
apk_label = "Homework Engine"
activity = "android.app.NativeActivity"