[dependencies]
core = { path = "../core" }
paper = { path = "../paper" }
natural-style = { path = "../styles/natural" }
image = { version = "0.25", default-features = false, features = ["png"] }
egui = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
winit = { version = "0.30", features = ["android-native-activity"] }
# Remove this line entirely:
# android-activity = { version = "0.6", features = ["native-activity"] }
serde_json = "1"
wgpu = "0.19"
pollster = "0.3"