[package]
name = "homework-engine-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
paper = { path = "../paper" }
natural-style = { path = "../styles/natural" }
image = { version = "0.25", default-features = false, features = ["png"] }
egui = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
# winit is brought by egui-wgpu, but we add it explicitly to set features
winit = { version = "0.29", features = ["android-native-activity"] }
# Enable native-activity feature for android-activity
android-activity = { version = "0.5", features = ["native-activity"] }
serde_json = "1"
wgpu = "0.19"
pollster = "0.3"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
apk_label = "Homework Engine"
activity = "android.app.NativeActivity"